--- a/README.Rmd
+++ b/README.Rmd
@@ -18,37 +18,60 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of SpotifyAssistantR is to ...
+In this project, we aim to create a package in R that builds on top of the spotifyr package and offers more useful features to improve the Spotify user experience. 
+
+This is achieved by utilizing REST APIs to implement the functions. Additionally, our package will combine multiple requests from the spotifyR package to provide additional insights for Spotify users.
+
+## Authors
+- Caroline Tang
+- Chester Wang
+- Jenit Jain
+- Julie Song
+
+This package was originally created as part of the requirements of DSCI524 (Collaborative Software Development), a course in the Master of Data Science program at the University of British Columbia. All original members of this project abided by the [Code of Conduct](CODE_OF_CONDUCT.md).
 
 ## Installation
 
 You can install the development version of SpotifyAssistantR like so:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+devtools::install_github('UBC-MDS/SpotifyAssistantR')
 ```
 
-## Example
+## Dependencies
+
+We use spotifyR package to authenticate (getting and refreshing access tokens), acquire data and get user-specific information.
+Install spotifyR with:
+
+```r
+install.packages('spotifyr')
+```
+
+## Environment Setup
+
+To use the package we require you to supplement the client id and client secret in order to acquire token:
+
+```r
+Sys.setenv(SPOTIFY_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxx')
+Sys.setenv(SPOTIFY_CLIENT_SECRET = 'xxxxxxxxxxxxxxxxxxxxx')
+
+access_token <- get_spotify_access_token()
+```
+This must be provided after loading the spotifyr library and before using the package. 
+
+## Usage
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example}
+```r
 library(SpotifyAssistantR)
-## basic example code
+get_new_releases_by_continent(country_code='Asia', n_limit=3)
+# [[1]]
+# [1] "Renegade"
+# 
+# [[2]]
+# [1] "LANDER"
+# 
+# [[3]]
+# [1] "Dreaming of You"
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
