added environment setup details

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,9 +42,11 @@ devtools::install_github('UBC-MDS/SpotifyAssistantR')
 
 ## Dependencies
 
-R (>=4.1.0),
-- spotifyr
-- dplyr
+R (>=4.1.0)
+
+  - spotifyr (2.2.4)
+  
+  - dplyr
 
 ## Environment Setup
 
@@ -53,25 +55,49 @@ Using this package requires Spotify and Spotify Developer accounts, which you ca
 creating an account, you will need to create an app to obtain the necessary client ID and secret
 in order to authenticate into the Spotify API.
 
-![]
+![Creating an app in the Spotify Developer Dashboard](man/figures/dashboard-create-app.jpg)
 
-To use the package we require you to supplement the client id and client secret in order to acquire token:
+After giving your app a name and description, you should be able to obtain the client
+ID and secret from the top of the app overview:
+
+![Client ID and secret location](man/figures/finding-client-secret.jpg)
+After clicking `SHOW CLIENT SECRET`:
+
+![Client ID and secret location](man/figures/unhidden-client-secret.jpg)
+
+To use the package we require you to supplement the client ID and client secret 
+as environment variables:
 
 ```r
 Sys.setenv(SPOTIFY_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxx')
 Sys.setenv(SPOTIFY_CLIENT_SECRET = 'xxxxxxxxxxxxxxxxxxxxx')
 
-access_token <- get_spotify_access_token()
+access_token <- spotifyr::get_spotify_access_token()
+authentication_code <- spotifyr::get_spotify_authentication_code()
 ```
-This must be provided after loading the spotifyr library and before using the package. 
+This must be provided after loading the `spotifyr` library and before using the package.
+
+Running `spotifyr::get_spotify_authentication_code()` should open a new browser tab
+that asks for permission for the app to access your information. If successful, you
+should get a message that you can close the tab and return to R. 
+
+If this is not the case, you may need to add `http://localhost:1410/` as a 
+redirect URI in the app, by clicking `Edit Settings` in the app overview and 
+pasting the URI under `Redirect URIs`. Alternatively, you may need to rotate the
+client secret and re-assign `SPOTIFY_CLIENT_SECRET`.
 
 ## Usage
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example which shows you how to get the new releases in Asia:
 
 ```r
 library(SpotifyAssistantR)
+
+Sys.setenv(SPOTIFY_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxx')
+Sys.setenv(SPOTIFY_CLIENT_SECRET = 'xxxxxxxxxxxxxxxxxxxxx')
+
 get_new_releases_by_continent(country_code='Asia', n_limit=3)
+
 # [[1]]
 # [1] "Renegade"
 # 
