--- a/README.Rmd
+++ b/README.Rmd
@@ -89,7 +89,7 @@ client secret and re-assign `SPOTIFY_CLIENT_SECRET`.
 
 ## Usage
 
-This is a basic example which shows you how to get the new releases in Asia:
+These are some basic usage examples for each of the core functions:
 
 ```r
 library(SpotifyAssistantR)
@@ -97,6 +97,7 @@ library(SpotifyAssistantR)
 Sys.setenv(SPOTIFY_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxx')
 Sys.setenv(SPOTIFY_CLIENT_SECRET = 'xxxxxxxxxxxxxxxxxxxxx')
 
+# Get new releases in Asia:
 get_new_releases_by_continent(country_code='Asia', n_limit=3)
 
 # [[1]]
@@ -107,4 +108,11 @@ get_new_releases_by_continent(country_code='Asia', n_limit=3)
 # 
 # [[3]]
 # [1] "Dreaming of You"
+
+# Get a new playlist on your Spotify account filled with recommended songs based on your top artists:
+get_song_recommendations()
+# [1] "Generating recommended songs based on artists ..."
+# [1] "Here is a link to the new playlist: https://open.spotify.com/playlist/2CB2JEtHcraGS0GeEkzEUW"
+
 ```
+For more detailed usage information, please [see here](https://ubc-mds.github.io/SpotifyAssistantR/)
