--- a/README.Rmd
+++ b/README.Rmd
@@ -108,3 +108,28 @@ get_new_releases_by_continent(country_code='Asia', n_limit=3)
 # [[3]]
 # [1] "Dreaming of You"
 ```
+
+This is a simple example to get song titles from some of your saved playlists:
+```r
+# for one playlist
+get_playlists_songs(playlist_names = 'bops')
+
+# [1] "Getting songs for bops"
+# $bops
+#   [1] "hot girl bummer"                                          
+#   [2] "Salt"                                                     
+#   [3] "Don't Start Now"  
+
+# for more than one playlist
+get_playlists_songs(playlist_names = c('bops', 'night drives'))
+
+# [1] "Getting songs for night drives"
+# [1] "Getting songs for bops"
+# $`night drives`
+#  [1] "Sunset (2019 Y.Nakamura Remastering)"               
+#  [2] "Plastic Love"
+# $bops
+#   [1] "hot girl bummer"                                          
+#   [2] "Salt"                                                     
+#   [3] "Don't Start Now"
+```
