Updated README and vignette function outputs

--- a/README.Rmd
+++ b/README.Rmd
@@ -98,8 +98,8 @@ Sys.setenv(SPOTIFY_CLIENT_ID = 'xxxxxxxxxxxxxxxxxxxxx')
 Sys.setenv(SPOTIFY_CLIENT_SECRET = 'xxxxxxxxxxxxxxxxxxxxx')
 
 # Get new releases in Asia:
-get_new_releases_by_continent(country_code='Asia', n_limit=3)
-
+get_new_releases_by_continent(continent = 'Americas', n_limit=3)
+# -- Loading new releases in  Americas , this may take a while... 
 # [[1]]
 # [1] "Renegade"
 # 
@@ -137,5 +137,8 @@ get_playlists_songs(playlist_names = c('bops', 'night drives'))
 #   [1] "hot girl bummer"                                          
 #   [2] "Salt"                                                     
 #   [3] "Don't Start Now"
+
+# Get the user's top listening genres
+get_users_top_genres()
 ```
 For more detailed usage information, please [see here](https://ubc-mds.github.io/SpotifyAssistantR/articles/my-vignette.html)
