--- a/README.Rmd
+++ b/README.Rmd
@@ -138,7 +138,9 @@ get_playlists_songs(playlist_names = c('bops', 'night drives'))
 #   [2] "Salt"                                                     
 #   [3] "Don't Start Now"
 
-# Get the user's top listening genres
+# Get the top genres of music among the tracks in "Your Music" library.
 get_users_top_genres()
+
+# [1] "rap"     "pop"     "hip hop" "pop rap" "trap"
 ```
 For more detailed usage information, please [see here](https://ubc-mds.github.io/SpotifyAssistantR/articles/my-vignette.html)
